agrendando los cambios

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
             <div class="container-bottom">
 
-                <button id="first" onclick="operacion(this.id)"> </button>
-                <button id="second" onclick="operacion(this.id)"></button>
-                <button id="third" onclick="operacion(this.id)"> </button>
-                <button id="fouth" onclick="operacion(this.id)"> </button>
-                <button id="fifth" onclick="operacion(this.id)"> </button>
-                <button id="sixth" onclick="operacion(this.id)"> </button>
-                <button id="seventh" onclick="operacion(this.id)"> </button>
-                <button id="eighth" onclick="operacion(this.id)"> </button>
-                <button id="ninth" onclick="operacion(this.id)"> </button>
+                <button id="0" class="first" onclick="operacion(this.id)"> </button>
+                <button id="1" class="second" onclick="operacion(this.id)"></button>
+                <button id="2" class="third" onclick="operacion(this.id)"> </button>
+                <button id="3" class="fouth" onclick="operacion(this.id)"> </button>
+                <button id="4" class="fifth" onclick="operacion(this.id)"> </button>
+                <button id="5" class="sixth" onclick="operacion(this.id)"> </button>
+                <button id="6" class="seventh" onclick="operacion(this.id)"> </button>
+                <button id="7" class="eighth" onclick="operacion(this.id)"> </button>
+                <button id="8" class="ninth" onclick="operacion(this.id)"> </button>
 
                 <!-- <img src="/tictactoc/img/0.png" /> -->
             </div>
